--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
-          <input id="address" name="address" type="text">
+          <input id="address" name="address" type="text" placeholder="Координаты в формате {00.00000, 000.00000}" pattern="\d{1,3}\.\d{5,}\D\s\d{1,3}\.\d{5,}" required>
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
